welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:9: error: '(' expected but '{' found.
		{
                ^diff21:12: error: illegal start of simple expression
} 
^