welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = 
{
	if(n>21)
	{
	return (Math.abs(n-21))*2
	}

		else if
		{
		return Math.abs(n-21)
		}
}